--- a/musictaste-html/styles.css
+++ b/musictaste-html/styles.css
@@ -18,3 +18,37 @@ header h1 {
     font-size: 2.5em;
     margin-bottom: 10px;
 }
+header img {
+
+}
+nav menu{
+
+}
+/*any anchor inside of a link*/
+nav menu li a{
+
+}
+main{
+
+}
+main h2{
+
+}
+main p{
+
+}
+#login-btn{
+
+}
+#login-btn:hover{
+
+}
+footer{
+
+}
+footer a{
+    
+}
+footer a:hover{
+    
+}
