--- a/musictaste-html/styles.css
+++ b/musictaste-html/styles.css
@@ -50,7 +50,14 @@ main p{
     margin-bottom: 20px;
 }
 #login-btn{
-
+    background-color: #1db953;
+    color: white;
+    padding: 12px 25px;
+    border:none;
+    border-radius: 25px;
+    font-size: 1.3em;
+    cursor: pointer;
+    transition: background-color 0.3s;
 }
 #login-btn:hover{
 
