--- a/musictaste-html/styles.css
+++ b/musictaste-html/styles.css
@@ -19,12 +19,18 @@ header h1 {
     margin-bottom: 10px;
 }
 header img {
-
+    display: block;
+    margin: 10px auto;
+    border-radius: 10px;
 }
 nav menu{
-
+    list-style: none;
+    display: flex;
+    justify-content: center;
+    gap: 20px;
 }
 /*any anchor inside of a link*/
+
 nav menu li a{
     color: #fff;
     font-weight: bold;
