--- a/musictaste-html/styles.css
+++ b/musictaste-html/styles.css
@@ -45,6 +45,10 @@ main{
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0,0,0,0.1);
 }
+main button{
+    justify-content: center;
+    display:flex;
+}
 main h2{
     font-size: 1.8em;
     color: #1a1a2a;
