--- a/musictaste-html/styles.css
+++ b/musictaste-html/styles.css
@@ -78,6 +78,7 @@ main p{
     font-size: 1.2em;
     margin-bottom: 20px;
 }
+
 #login-btn{
     background-color: #1db953;
     color: white;
@@ -89,6 +90,19 @@ main p{
     transition: background-color 0.3s;
 }
 #login-btn:hover{
+    background-color: #1ed760;
+}
+#analyze-btn{
+    background-color: #1db953;
+    color: white;
+    padding: 12px 25px;
+    border:none;
+    border-radius: 25px;
+    font-size: 1.3em;
+    cursor: pointer;
+    transition: background-color 0.3s;
+}
+#analyze-btn:hover{
     background-color: #1ed760;
 }
 footer{
