--- a/musictaste-html/styles.css
+++ b/musictaste-html/styles.css
@@ -91,7 +91,7 @@ main p{
     margin-bottom: 20px;
 }
 #analyze-btn:hover{
-    background-color: #1ed760;
+    background-color: #57e9ff;
 }
 footer{
     text-align: center;
