--- a/musictaste-html/styles.css
+++ b/musictaste-html/styles.css
@@ -6,7 +6,7 @@
 body{
     font-family: Arial, sans-serif;
     background-color: #46475e;
-    padding-bottom: 80;
+    padding-bottom: 80px;
 }
 header {
     background-color: #f5fafc;
@@ -39,7 +39,7 @@ nav menu li a{
 }
 main{
     max-width: 800px;
-    margin: 40px;
+    margin: 40px auto;
     padding: 20px;
     background-color: white;
     border-radius: 10px;
@@ -48,6 +48,7 @@ main{
     flex-direction: column;
     align-items: center;
     text-align: center;
+    
     }
 #login-btn{
     background-color: #1db954;
